--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,30 @@
-# volumes:
+volumes:
+  recipehunt:
+    external: true
+
 services:
+  mongo:
+    image: mongo
+    restart: always
+    volumes:
+      - recipehunt:/data/db
+    environment:
+       MONGO_INITDB_ROOT_USERNAME: admin
+       MONGO_INITDB_ROOT_PASSWORD: password
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+       ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+       ME_CONFIG_MONGODB_ADMINPASSWORD: password
+       ME_CONFIG_MONGODB_SERVER: mongo
+
   fastapi:
     environment:
+      DATABASE_URL: mongodb://admin:password@mongo:27017
       CORS_HOST: http://localhost:3000
     build:
       context: api
@@ -24,4 +47,4 @@ services:
       NODE_ENV: development
       HOST: "0.0.0.0"
       PUBLIC_URL: http://localhost:3000
-      REACT_APP_API_HOST: ${REACT_APP_API_HOST}
+      REACT_APP_API_HOST: http://localhost:8000
