--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,6 +24,7 @@ services:
 
   fastapi:
     environment:
+      SIGNING_KEY: A56B1B966683A4EC0C61ECC057894171 
       DATABASE_URL: mongodb://admin:password@mongo:27017
       CORS_HOST: http://localhost:3000
     build:
