--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,8 +9,8 @@ services:
     volumes:
       - recipehunt:/data/db
     environment:
-       MONGO_INITDB_ROOT_USERNAME: admin
-       MONGO_INITDB_ROOT_PASSWORD: password
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password
 
   mongo-express:
     image: mongo-express
@@ -18,13 +18,13 @@ services:
     ports:
       - 8081:8081
     environment:
-       ME_CONFIG_MONGODB_ADMINUSERNAME: admin
-       ME_CONFIG_MONGODB_ADMINPASSWORD: password
-       ME_CONFIG_MONGODB_SERVER: mongo
+      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+      ME_CONFIG_MONGODB_ADMINPASSWORD: password
+      ME_CONFIG_MONGODB_SERVER: mongo
 
   fastapi:
     environment:
-      SIGNING_KEY: A56B1B966683A4EC0C61ECC057894171 
+      SIGNING_KEY: ${SIGNING_KEY}
       DATABASE_URL: mongodb://admin:password@mongo:27017
       CORS_HOST: http://localhost:3000
     build:
