--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ api-unit-tests-job:
   image: python:3-bullseye
   stage: test
   variables:
-    MONGO_URL: "string"
+    DATABASE_URL: "string"
     MONGO_DB: "string"
     SIGNING_KEY: "string"
   needs:
