added __init__ file to tests directory to try to fix modulenotfound error in pipeline failure

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ api-unit-tests-job:
     DATABASE_URL: "string"
     MONGO_DB: "string"
     SIGNING_KEY: "string"
-    TASTY_API_KEY: "string"
+    # TASTY_API_KEY: "string"
   needs:
     - lint-test-job
   script:
