--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,7 @@ services:
       SIGNING_KEY: ${SIGNING_KEY}
       DATABASE_URL: mongodb://admin:password@mongo:27017
       CORS_HOST: http://localhost:3000
+      TASTY_API_KEY: ${TASTY_API_KEY}
     build:
       context: api
       dockerfile: Dockerfile.dev
